# piern_airfoil

./: .gitignore  02 - NeuralFoil Optimization.ipynb  CLAUDE.md  README.md  benchmark_comparison.py  cleanup.sh  pyproject.toml  visualize_benchmark.py
data/: benchmark_airfoils.json
docs/: paper_draft.md  paper_notes.md
figures/: benchmark_data.csv
src/: __init__.py
src/piern/: __init__.py  pipeline.py
src/piern/prompt2data/: __init__.py  bench_forward.py  encoder_extractor.py  generate_diverse.py  mlp.py  mlp_hidden.py
src/piern/prompt2data/deprecated/: README.md  mlp.py  mlp_hidden.py
src/piern/router/: __init__.py  mlp_router.py  opt_router.py  train_threshold.py
src/piern/router/trained/: mlp_router.json  optimal_threshold.json
src/piern/seq_level/: generate_data.py  generate_data_simple.py  router_v0.py
src/piern/switch/: __init__.py  optimizer.py  router.py
src/piern/view/: app.py  extract.py  verify.py
src/piern_airfoil/: __init__.py  constraints.py  eval.py  hierarchical.py  thin_airfoil.py  xfoil_baseline.py  xfoil_optimizer.py
src/piern_airfoil/_legacy/: __init__.py  global_optimizer.py  gradient_optimizer.py  multi_fidelity.py  routed_optimizer.py
src/piern_airfoil/analysis/: __init__.py  base.py  confidence.py  fusion.py  neuralfoil_direct.py  neuralfoil_wrapper.py  simple_aero.py  transolver_wrapper.py
src/piern_airfoil/models/: transolver.py
src/piern_airfoil/neuralfoil/: __init__.py  high_fidelity.py  low_fidelity.py  neuralfoil.py
src/piern_airfoil/optimization/: __init__.py  callbacks.py  engine.py  intelligent_optimizer.py
src/piern_airfoil/parameterization/: __init__.py  base.py  fitting.py  validity.py
src/piern_airfoil/piern/: __init__.py  action.py  agent.py  policy_network.py  state_representation.py  trainer.py
src/piern_airfoil/thin_airfoil/: __init__.py  constraints.py  global_optimizer.py  gradient_optimizer.py  multi_fidelity.py  routed_optimizer.py  router.py  test_global_optimization.py  thin_airfoil_solver.py
src/piern_airfoil/transolver/: __init__.py  high_fidelity.py  model.py  test.py
src/piern_airfoil/transolver/layers/: UPT_Blocks.py
src/piern_airfoil/ui/: __init__.py  visualization.py
tests/: benchmark_ablation.py  benchmark_pipeline.py  benchmark_router.py  demo_pipeline.py  generate_convergence_plots.py  regenerate_summary.py  replot_all.py  run_all_benchmarks.py  screen_airfoils.py  setup_benchmark.py  test_extract.py  test_neuralfoil_optimization.py  test_pipeline.py  visualize_airfoils.py  visualize_xfoil.py
