[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piern_airfoil"
version = "0.5.0"
description = "Hierarchical CST airfoil optimization with adaptive fidelity routing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kaltsit"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "neuralfoil>=0.3.0",
    "matplotlib>=3.5",
    "aerosandbox>=4.2.9",
    "Pillow>=9.0",
    "statsmodels>=0.14.6",
    "gradio>=6.14.0",
    "torch>=2.11.0",
    "cv>=1.0.0",
    "opencv-python>=4.13.0.92",
]

[project.optional-dependencies]
train = [
    "torch>=2.11.0",
]
ui = [
    "gradio>=4.0",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/R-226/piern_airfoil"

[tool.setuptools.packages.find]
where = ["src"]
include = ["piern_airfoil*", "piern*", "piern.router*", "piern.prompt2data*", "piern.view*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
